<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="gravity"
    tools:context=".appointments.AppointmentActivity">

    <TextView
        android:id="@+id/appointmentCreationTxtEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_creation_end_time_txt"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/appointementCreationBtnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointmentCreationBtnEndTime" />

    <EditText
        android:id="@+id/appointmentCreationEditTxtAppointmentTitleSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="607dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/appointment_creation_appointment_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <EditText
        android:id="@+id/appointmentCreationEditTxtAppointmentCourseSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="607dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/appointment_creation_appointment_course"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <Button
        android:id="@+id/appointmentCreationBtnStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_creation_pick_start_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <Button
        android:id="@+id/appointmentCreationBtnEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="56dp"
        android:text="@string/appointment_creation_pick_end_time"
        app:layout_constraintBottom_toTopOf="@+id/appointementCreationBtnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointmentCreationBtnStartTime" />

    <Button
        android:id="@+id/appointmentCreationbtnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/appointment_creation_done_create_appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointementCreationBtnReset" />

    <Button
        android:id="@+id/appointementCreationBtnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/appointment_creation_reset_btn_txt"
        app:layout_constraintBottom_toTopOf="@+id/appointmentCreationbtnDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/appointmentCreationtxtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointmentCreationbtnDone" />

    <TextView
        android:id="@+id/appointmentCreationTxtWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/appointment_creation_maximum_duration_of_an_appointment_is_4h"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointmentCreationbtnDone"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/appointmentCreationTxtStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_creation_start_time_txt"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/appointmentCreationBtnEndTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointmentCreationBtnStartTime" />

    <Button
        android:id="@+id/appointmentCreationBtnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="233dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:text="@string/appointment_creation_settings"
        app:layout_constraintBottom_toTopOf="@+id/appointmentCreationbtnDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/appointementCreationBtnReset"
        app:layout_constraintTop_toBottomOf="@+id/appointmentCreationEditTxtAppointmentCourseSet"
        app:layout_constraintVertical_bias="0.583" />
</androidx.constraintlayout.widget.ConstraintLayout>