...
                    android:id="@+id/appointmentCreationStartTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start :"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/appointmentCreationStartTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/appointmentCreationStartTime"
                    android:layout_width="0dp"
...
                    android:id="@+id/appointementCreationEndTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="End :"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/appointmentCreationEndTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/appointmentCreationEndTime"
                    android:layout_width="0dp"
...
